# manif-geom-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: lib.rs  so2.rs  so3.rs
